--- a/Serebrennikov_Create_unite_df.ipynb
+++ b/Serebrennikov_Create_unite_df.ipynb
@@ -278,6 +278,7 @@
     "df = pd.merge(df_text, df_old_path, how='outer', indicator=True)\n",
     "df.replace({'-': None},inplace =True)\n",
     "df['rus_transl'] = df['rus_transl'].replace('\\\\n', ' ', regex=True)\n",
+    "df['jewish_text'] = df['jewish_text'].replace('\\\\n', ' ', regex=True)\n",
     "\n",
     "df"
    ]
